--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,22 @@
         android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AlokasiDana"></activity>
-        <activity android:name=".ForgotPassword" />
-        <activity android:name=".Ewallet" />
-        <activity android:name=".Transfer" />
+        <activity android:name=".AlokasiDana"
+            android:windowSoftInputMode="adjustPan"
+            android:screenOrientation="portrait"
+            ></activity>
+        <activity android:name=".ForgotPassword"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Ewallet"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Transfer"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Dashboard"
             android:label="@string/title_activity_dashboard"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Bayar" />
+        <activity android:name=".Bayar"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".SplashScreen"
             android:label="@string/app_name"
@@ -32,10 +39,6 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity
-            android:name=".SignUp"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
