--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,22 +9,27 @@
         android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AlokasiDana"
-            android:windowSoftInputMode="adjustPan"
+        <activity android:name=".Report"></activity>
+        <activity
+            android:name=".AlokasiDana"
             android:screenOrientation="portrait"
-            ></activity>
-        <activity android:name=".ForgotPassword"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Ewallet"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Transfer"
-            android:screenOrientation="portrait"/>
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".ForgotPassword"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Ewallet"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Transfer"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Dashboard"
             android:label="@string/title_activity_dashboard"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Bayar"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".Bayar"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".SplashScreen"
             android:label="@string/app_name"
