--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Report"></activity>
+        <activity android:name=".AboutUs"></activity>
+        <activity android:name=".Report" />
         <activity
             android:name=".AlokasiDana"
             android:screenOrientation="portrait"
